# platform.core.uifw.pepper-dali

./: Makefile.am  configure.ac  pepper-dali.pc.in  project.config
packaging/: pepper-dali.spec
pepper-dali/: Makefile.am
pepper-dali/internal/: compositor-impl.cpp  compositor-impl.h  file.list  input-impl.cpp  input-impl.h  input.cpp  input.h  object-impl.cpp  object-impl.h  object-view-impl.cpp  object-view-impl.h  object.cpp  object.h  output-impl.cpp  output-impl.h  output.cpp  output.h  shell-client-impl.cpp  shell-client-impl.h  shell-client.cpp  shell-client.h  shell-impl.cpp  shell-impl.h  shell.cpp  shell.h
pepper-dali/internal/extensions/: tizen-policy.cpp  tizen-policy.h
pepper-dali/public-api/: file.list  pepper-dali.h
pepper-dali/public-api/compositor/: compositor.cpp  compositor.h
pepper-dali/public-api/object-view/: object-view.cpp  object-view.h
